fixed layout shift

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ body {
   padding: 1em;
   line-height: 1.4;
   font-size: 16px;
+  overflow-y: scroll;
 }
 
 /* header and footer areas */
